[gd_scene load_steps=13 format=4 uid="uid://8wqtleq0irdt"]

[ext_resource type="PackedScene" uid="uid://drwpijhad8ye1" path="res://src/scene/game/base/forest_scene.tscn" id="1_bq5xe"]
[ext_resource type="Script" uid="uid://3mrvgkrit63b" path="res://src/scene/game/scene_1.gd" id="2_2dm3n"]
[ext_resource type="PackedScene" uid="uid://dub58i354rw7w" path="res://src/unit/props/rain.tscn" id="3_sbyas"]
[ext_resource type="Texture2D" uid="uid://cb6bmar0rgggn" path="res://asset/texture/prop/forest/stone.webp" id="4_o56cm"]
[ext_resource type="PackedScene" uid="uid://dekecjlka8xp5" path="res://src/ui/dialog/dialog.tscn" id="5_xac3s"]
[ext_resource type="PackedScene" uid="uid://vpfo1b81nema" path="res://src/ui/dialog/dialog_content.tscn" id="6_obgq7"]
[ext_resource type="PackedScene" uid="uid://debavhwwbmt4m" path="res://src/unit/props/night_light.tscn" id="7_uul17"]
[ext_resource type="PackedScene" uid="uid://bictjaq7mapmy" path="res://src/scene/teleporter.tscn" id="8_uskd0"]
[ext_resource type="PackedScene" uid="uid://dhp3xvkqaqrid" path="res://src/scene/entry_point.tscn" id="9_iuclk"]
[ext_resource type="PackedScene" uid="uid://2vwp3qil3b1o" path="res://src/ui/tutorial_hint.tscn" id="10_r8x3s"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8woqr"]
b = Vector2(64, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_s06o2"]
b = Vector2(16, 0)

[node name="Scene1" instance=ExtResource("1_bq5xe")]
script = ExtResource("2_2dm3n")
scene_name = "SCENE_FOREST_START"

[node name="Rain" parent="Background/Prop" index="0" instance=ExtResource("3_sbyas")]
position = Vector2(192, -64)

[node name="Stone" type="Sprite2D" parent="Background/Prop" index="1"]
position = Vector2(184, 152)
texture = ExtResource("4_o56cm")

[node name="Tile" parent="Background/Prop" index="2"]
tile_map_data = PackedByteArray("AAAsABUAAQALAAcAAAAsABQAAQALAAYAAAAsABMAAQALAAQAAAArABUAAQAJAAcAAAArABQAAQAKAAEAAAArABMAAQAKAAAAAAAqABUAAQAJAAMAAAAqABQAAQAKAAUAAAAqABMAAQAKAAAAAAApABUAAQAJAAMAAAApABQAAQAKAAEAAAApABMAAQAKAAQAAAAoABUAAQAIAAcAAAAoABQAAQAIAAUAAAAoABMAAQAIAAQAAAAEABQAAQACAAEAAAAFABQAAQACAAEAAAAGABQAAQACAAEAAAA=")

[node name="GameTile" parent="." index="1"]
tile_map_data = PackedByteArray("AAD//xAAAAAJAAYAAAD//xEAAAAJAAYAAAD//xIAAAAJAAYAAAD//xMAAAAKAAEAAAD//xQAAAAJAAIAAAD//xUAAAAJAAYAAAD//xYAAAAKAAEAAAD//xcAAAAKAAEAAAD//xgAAAAKAAEAAAD//xkAAAAJAAIAAAD//xoAAAAKAAEAAAD//xsAAAAKAAUAAAAAABAAAAAKAAEAAAAAABEAAAAKAAUAAAAAABIAAAAKAAEAAAAAABMAAAAJAAYAAAAAABQAAAAKAAUAAAAAABUAAAAJAAIAAAAAABYAAAAKAAUAAAAAABcAAAAKAAUAAAAAABgAAAAKAAUAAAAAABkAAAAKAAUAAAAAABoAAAAJAAYAAAAAABsAAAAJAAYAAAABABAAAAAKAAUAAAABABEAAAAJAAIAAAABABIAAAAKAAUAAAABABMAAAAKAAEAAAABABQAAAAKAAEAAAABABUAAAAKAAEAAAABABYAAAAKAAEAAAABABcAAAAJAAYAAAABABgAAAAJAAIAAAABABkAAAAKAAEAAAABABoAAAAJAAIAAAABABsAAAAKAAEAAAACABcAAAAKAAUAAAACABgAAAAJAAYAAAACABkAAAAJAAIAAAACABoAAAAJAAYAAAACABsAAAAKAAUAAAADABcAAAAJAAIAAAADABgAAAAKAAEAAAADABkAAAAKAAEAAAADABoAAAAJAAYAAAADABsAAAAKAAUAAAAEABcAAAAJAAYAAAAEABgAAAAJAAYAAAAEABkAAAAJAAYAAAAEABoAAAAKAAUAAAAEABsAAAAKAAEAAAAFABcAAAAKAAUAAAAFABgAAAAKAAEAAAAFABkAAAAJAAIAAAAFABoAAAAJAAYAAAAFABsAAAAKAAEAAAAGABcAAAAJAAIAAAAGABgAAAAKAAUAAAAGABkAAAAKAAEAAAAGABoAAAAKAAEAAAAGABsAAAAKAAUAAAAHABcAAAAJAAIAAAAHABgAAAAJAAYAAAAHABkAAAAJAAIAAAAHABoAAAAKAAUAAAAHABsAAAAKAAUAAAAIABcAAAAKAAEAAAAIABgAAAAJAAYAAAAIABkAAAAKAAUAAAAIABoAAAAKAAEAAAAIABsAAAAKAAUAAAAJABcAAAAJAAIAAAAJABgAAAAKAAUAAAAJABkAAAAKAAEAAAAJABoAAAAJAAYAAAAJABsAAAAJAAYAAAAKABcAAAAJAAYAAAAKABgAAAAJAAIAAAAKABkAAAAJAAIAAAAKABoAAAAKAAEAAAAKABsAAAAKAAUAAAALABcAAAAJAAIAAAALABgAAAAKAAUAAAALABkAAAAJAAYAAAALABoAAAAKAAUAAAALABsAAAAJAAYAAAAMABcAAAAKAAEAAAAMABgAAAAKAAUAAAAMABkAAAAJAAYAAAAMABoAAAAKAAUAAAAMABsAAAAJAAIAAAANABcAAAAKAAUAAAANABgAAAAKAAUAAAANABkAAAAKAAEAAAANABoAAAAKAAUAAAANABsAAAAJAAYAAAAOABcAAAAKAAEAAAAOABgAAAAJAAIAAAAOABkAAAAKAAUAAAAOABoAAAAKAAEAAAAOABsAAAAJAAYAAAAPABcAAAAJAAIAAAAPABgAAAAKAAEAAAAPABkAAAAJAAYAAAAPABoAAAAKAAEAAAAPABsAAAAJAAYAAAAQABcAAAAKAAEAAAAQABgAAAAJAAIAAAAQABkAAAAJAAYAAAAQABoAAAAJAAIAAAAQABsAAAAJAAYAAAARABcAAAAKAAUAAAARABgAAAAKAAEAAAARABkAAAAKAAUAAAARABoAAAAJAAYAAAARABsAAAAJAAYAAAASABcAAAAKAAUAAAASABgAAAAJAAYAAAASABkAAAAJAAIAAAASABoAAAAJAAIAAAASABsAAAAKAAEAAAATABcAAAAKAAUAAAATABgAAAAJAAYAAAATABkAAAAJAAYAAAATABoAAAAKAAUAAAATABsAAAAKAAUAAAAUABcAAAAKAAEAAAAUABgAAAAJAAYAAAAUABkAAAAJAAYAAAAUABoAAAAKAAEAAAAUABsAAAAKAAUAAAAVABcAAAAJAAYAAAAVABgAAAAJAAIAAAAVABkAAAAJAAYAAAAVABoAAAAKAAUAAAAVABsAAAAJAAYAAAAWABcAAAAJAAIAAAAWABgAAAAJAAIAAAAWABkAAAAJAAYAAAAWABoAAAAJAAYAAAAWABsAAAAKAAEAAAAXABcAAAAKAAEAAAAXABgAAAAJAAYAAAAXABkAAAAKAAUAAAAXABoAAAAKAAEAAAAXABsAAAAJAAYAAAAYABcAAAAKAAUAAAAYABgAAAAKAAUAAAAYABkAAAAKAAEAAAAYABoAAAAJAAYAAAAYABsAAAAJAAYAAAAZABcAAAAJAAIAAAAZABgAAAAJAAYAAAAZABkAAAAKAAUAAAAZABoAAAAJAAYAAAAZABsAAAAJAAIAAAAaABcAAAAKAAEAAAAaABgAAAAJAAYAAAAaABkAAAAJAAYAAAAaABoAAAAJAAYAAAAaABsAAAAJAAIAAAAbABcAAAAKAAEAAAAbABgAAAAKAAUAAAAbABkAAAAJAAYAAAAbABoAAAAKAAUAAAAbABsAAAAKAAEAAAAcABcAAAAJAAIAAAAcABgAAAAKAAUAAAAcABkAAAAJAAIAAAAcABoAAAAJAAIAAAAcABsAAAAKAAUAAAAdABcAAAAKAAUAAAAdABgAAAAJAAIAAAAdABkAAAAJAAYAAAAdABoAAAAKAAUAAAAdABsAAAAKAAEAAAAeABcAAAAJAAYAAAAeABgAAAAKAAEAAAAeABkAAAAKAAUAAAAeABoAAAAKAAEAAAAeABsAAAAKAAUAAAAfABcAAAAKAAEAAAAfABgAAAAJAAIAAAAfABkAAAAKAAUAAAAfABoAAAAJAAIAAAAfABsAAAAJAAYAAAAgABUAAAAKAAQAAAAgABYAAAAJAAIAAAAgABcAAAAJAAIAAAAgABgAAAAJAAYAAAAgABkAAAAJAAYAAAAgABoAAAAJAAYAAAAgABsAAAAKAAEAAAAhABUAAAAKAAQAAAAhABYAAAAKAAEAAAAhABcAAAAJAAIAAAAhABgAAAAJAAYAAAAhABkAAAAKAAUAAAAhABoAAAAKAAUAAAAhABsAAAAJAAYAAAAiABcAAAAJAAIAAAAiABgAAAAJAAIAAAAiABkAAAAKAAEAAAAiABoAAAAJAAYAAAAiABsAAAAKAAEAAAAjABcAAAAJAAIAAAAjABgAAAAJAAYAAAAjABkAAAAKAAUAAAAjABoAAAAJAAYAAAAjABsAAAAKAAEAAAAkABcAAAAKAAEAAAAkABgAAAAKAAUAAAAkABkAAAAKAAEAAAAkABoAAAAKAAUAAAAkABsAAAAKAAUAAAAlABcAAAAJAAIAAAAlABgAAAAJAAYAAAAlABkAAAAJAAIAAAAlABoAAAAKAAUAAAAlABsAAAAJAAIAAAAmABcAAAAJAAIAAAAmABgAAAAJAAIAAAAmABkAAAAKAAUAAAAmABoAAAAJAAYAAAAmABsAAAAKAAEAAAAnABcAAAAKAAUAAAAnABgAAAAJAAIAAAAnABkAAAAKAAUAAAAnABoAAAAJAAYAAAAnABsAAAAJAAYAAAAoABcAAAAKAAUAAAAoABgAAAAJAAIAAAAoABkAAAAJAAIAAAAoABoAAAAJAAIAAAAoABsAAAAJAAYAAAApABcAAAAJAAYAAAApABgAAAAKAAEAAAApABkAAAAKAAUAAAApABoAAAAKAAEAAAApABsAAAAJAAYAAAAqABcAAAAKAAEAAAAqABgAAAAKAAEAAAAqABkAAAAJAAIAAAAqABoAAAAJAAYAAAAqABsAAAAJAAYAAAArABcAAAAKAAUAAAArABgAAAAKAAUAAAArABkAAAAKAAEAAAArABoAAAAKAAUAAAArABsAAAAJAAIAAAAsABMAAAAIAAQAAAAsABQAAAAIAAEAAAAsABUAAAAFAAUAAAAsABYAAAAKAAUAAAAsABcAAAAJAAYAAAAsABgAAAAJAAIAAAAsABkAAAAJAAYAAAAsABoAAAAKAAUAAAAsABsAAAAKAAUAAAAtABMAAAAKAAQAAAAtABQAAAAKAAUAAAAtABUAAAAKAAUAAAAtABYAAAAJAAYAAAAtABcAAAAKAAUAAAAtABgAAAAJAAIAAAAtABkAAAAJAAIAAAAtABoAAAAKAAEAAAAtABsAAAAKAAEAAAAuABMAAAAKAAQAAAAuABQAAAAJAAIAAAAuABUAAAAKAAEAAAAuABYAAAAKAAEAAAAuABcAAAAJAAIAAAAuABgAAAAKAAEAAAAuABkAAAAKAAEAAAAuABoAAAAKAAUAAAAuABsAAAAKAAEAAAAvABMAAAAKAAQAAAAvABQAAAAKAAEAAAAvABUAAAAJAAIAAAAvABYAAAAJAAYAAAAvABcAAAAKAAUAAAAvABgAAAAJAAYAAAAvABkAAAAKAAUAAAAvABoAAAAKAAEAAAAvABsAAAAKAAEAAAAwABMAAAAKAAAAAAAwABQAAAAKAAEAAAAwABUAAAAJAAIAAAAwABYAAAAJAAIAAAAwABcAAAAJAAYAAAAwABgAAAAKAAEAAAAwABkAAAAJAAYAAAAwABoAAAAJAAIAAAAwABsAAAAJAAYAAAABAA8AAAAKAAEAAAAAAA8AAAAKAAEAAAD//w8AAAAKAAEAAAAfABYAAAAJAAYAAAAfABUAAAAKAAQAAAAeABYAAAAKAAUAAAAeABUAAAAKAAQAAAAdABYAAAAJAAYAAAAdABUAAAAKAAAAAAAcABYAAAAJAAIAAAAcABUAAAAKAAQAAAAbABYAAAAKAAUAAAAbABUAAAAKAAAAAAAaABYAAAAKAAEAAAAaABUAAAAKAAQAAAAZABYAAAAKAAEAAAAZABUAAAAKAAQAAAAYABYAAAAKAAUAAAAYABUAAAAKAAAAAAAXABYAAAAKAAEAAAAXABUAAAAKAAQAAAAWABYAAAAJAAIAAAAWABUAAAAKAAQAAAAVABYAAAAJAAYAAAAVABUAAAAKAAAAAAAUABYAAAAKAAUAAAAUABUAAAAKAAQAAAATABYAAAAKAAUAAAATABUAAAAKAAQAAAASABYAAAAJAAYAAAASABUAAAAKAAAAAAARABYAAAAKAAUAAAARABUAAAAKAAQAAAAQABYAAAAJAAYAAAAQABUAAAAKAAAAAAAPABYAAAAKAAEAAAAPABUAAAAKAAAAAAAOABYAAAAKAAUAAAAOABUAAAAKAAAAAAANABYAAAAJAAIAAAANABUAAAAKAAQAAAAMABYAAAAJAAYAAAAMABUAAAAKAAAAAAALABYAAAAJAAYAAAALABUAAAAKAAAAAAAKABYAAAAKAAEAAAAKABUAAAAKAAQAAAAJABYAAAAKAAEAAAAJABUAAAAKAAAAAAAIABYAAAAJAAIAAAAIABUAAAAKAAAAAAAHABYAAAAJAAIAAAAHABUAAAAGAAEAAAAGABYAAAAKAAUAAAAGABUAAAAKAAEAAAAFABYAAAAKAAUAAAAFABUAAAAKAAUAAAAEABYAAAAJAAYAAAAEABUAAAAJAAIAAAADABYAAAAJAAIAAAADABUAAAAJAAYAAAACABYAAAAKAAEAAAACABUAAAAKAAUAAAABAA4AAAAJAAIAAAABAA0AAAAKAAQAAAAAAA4AAAAJAAYAAAAAAA0AAAAKAAQAAAD//w4AAAAJAAIAAAD//w0AAAAKAAAAAAD+/w0AAAAFAAQAAAADABQAAAAJAAYAAAADABMAAAAKAAUAAAADABIAAAAKAAEAAAADABEAAAAGAAUAAAADABAAAAALAAYAAAADAA8AAAALAAYAAAADAA4AAAALAAYAAAADAA0AAAALAAAAAAACABQAAAAKAAEAAAACABMAAAAKAAEAAAACABIAAAAJAAYAAAACABEAAAAJAAIAAAACABAAAAAJAAYAAAACAA8AAAAKAAEAAAACAA4AAAAKAAEAAAACAA0AAAAKAAQAAAAjABYAAAAJAAYAAAAjABUAAAAKAAAAAAAiABYAAAAKAAEAAAAiABUAAAAKAAQAAAAlABYAAAAKAAUAAAAlABUAAAAKAAAAAAAkABYAAAAKAAEAAAAkABUAAAAKAAQAAAD+/xsAAAAIAAUAAAD+/xoAAAAIAAEAAAD+/xkAAAAIAAEAAAD+/xgAAAAIAAUAAAD+/xcAAAAIAAEAAAD+/xYAAAAIAAUAAAD+/xUAAAAIAAUAAAD+/xQAAAAIAAUAAAD+/xMAAAAIAAUAAAD+/xIAAAAIAAEAAAD+/xEAAAAIAAUAAAD+/xAAAAAIAAUAAAD+/w8AAAAIAAEAAAD+/w4AAAAIAAUAAAAxABwAAAALAAcAAAAxABsAAAALAAIAAAAwABwAAAAJAAMAAAAvABwAAAAJAAcAAAAuABwAAAAJAAcAAAAtABwAAAAJAAcAAAAsABwAAAAJAAcAAAArABwAAAAJAAMAAAAqABwAAAAJAAMAAAApABwAAAAJAAMAAAAoABwAAAAJAAMAAAAnABwAAAAJAAMAAAAmABwAAAAJAAMAAAAlABwAAAAJAAMAAAAkABwAAAAJAAMAAAAjABwAAAAJAAcAAAAiABwAAAAJAAMAAAAhABwAAAAJAAcAAAAgABwAAAAJAAcAAAAfABwAAAAJAAcAAAAeABwAAAAJAAMAAAAdABwAAAAJAAcAAAAcABwAAAAJAAcAAAAbABwAAAAJAAcAAAAaABwAAAAJAAcAAAAZABwAAAAJAAcAAAAYABwAAAAJAAcAAAAXABwAAAAJAAcAAAAWABwAAAAJAAcAAAAVABwAAAAJAAMAAAAUABwAAAAJAAcAAAATABwAAAAJAAMAAAASABwAAAAJAAMAAAARABwAAAAJAAcAAAAQABwAAAAJAAMAAAAPABwAAAAJAAcAAAAOABwAAAAJAAcAAAANABwAAAAJAAMAAAAMABwAAAAJAAMAAAALABwAAAAJAAMAAAAKABwAAAAJAAMAAAAJABwAAAAJAAcAAAAIABwAAAAJAAcAAAAHABwAAAAJAAcAAAAGABwAAAAJAAcAAAAFABwAAAAJAAcAAAAEABwAAAAJAAcAAAADABwAAAAJAAcAAAACABwAAAAJAAMAAAABABwAAAAJAAMAAAAAABwAAAAJAAcAAAD//xwAAAAJAAcAAAD+/xwAAAAIAAcAAAAxABoAAAALAAYAAAAxABkAAAALAAIAAAAxABgAAAALAAYAAAAxABcAAAALAAYAAAAxABYAAAALAAYAAAAxABUAAAALAAYAAAAxABQAAAALAAIAAAAxABMAAAAGAAQAAAAzABEAAAAAAAYAAAAzAPb/AAAAAAIAAAAzAPf/AAAAAAYAAAAzAPj/AAAAAAIAAAAzAPn/AAAAAAYAAAAzAPr/AAAAAAIAAAAzAPv/AAAAAAIAAAAzAPz/AAAAAAIAAAAzAP3/AAAAAAIAAAAzAP7/AAAAAAYAAAAzAP//AAAAAAIAAAAzAAAAAAAAAAIAAAAzAAEAAAAAAAIAAAAzAAIAAAAAAAYAAAAzAAMAAAAAAAYAAAAzAAQAAAAAAAYAAAAzAAUAAAAAAAYAAAAzAAYAAAAAAAIAAAAzAAcAAAAAAAYAAAAzAAgAAAAAAAYAAAAzAAkAAAAAAAIAAAAzAAoAAAAAAAYAAAAzAAsAAAAAAAYAAAAzAAwAAAAAAAIAAAAzAA0AAAAAAAYAAAAzAA4AAAAAAAYAAAAzAA8AAAAAAAIAAAAzABAAAAAAAAYAAAAzAPX/AAAAAAIAAAAzAPT/AAAAAAYAAAAzAPP/AAAAAAIAAAAzAPL/AAAAAAIAAAAzAPH/AAAAAAYAAAAzAPD/AAAAAAYAAAAzAO//AAAAAAIAAAAzAO7/AAAAAAYAAAAzAO3/AAAAAAYAAAAzAOz/AAAAAAIAAAAzAOv/AAAAAAYAAAAzAOr/AAAAAAIAAAAzAOn/AAAAAAYAAAAzAOj/AAAAAAIAAAAzAOf/AAAAAAYAAAAzAOb/AAADAAQAAAD+/+b/AAACAAcAAAD//+b/AAACAAMAAAAAAOb/AAACAAMAAAABAOb/AAACAAcAAAACAOb/AAACAAcAAAADAOb/AAACAAcAAAAEAOb/AAACAAcAAAAFAOb/AAACAAcAAAAGAOb/AAACAAMAAAAHAOb/AAACAAcAAAAIAOb/AAACAAcAAAAJAOb/AAACAAMAAAAKAOb/AAACAAMAAAALAOb/AAACAAMAAAAMAOb/AAACAAcAAAANAOb/AAACAAcAAAAOAOb/AAACAAMAAAAPAOb/AAACAAcAAAAQAOb/AAACAAcAAAARAOb/AAACAAMAAAASAOb/AAACAAcAAAATAOb/AAACAAMAAAAUAOb/AAACAAcAAAAVAOb/AAACAAMAAAAWAOb/AAACAAcAAAAXAOb/AAACAAcAAAAYAOb/AAACAAcAAAAZAOb/AAACAAcAAAAaAOb/AAACAAMAAAAbAOb/AAACAAcAAAAcAOb/AAACAAMAAAAdAOb/AAACAAcAAAAeAOb/AAACAAMAAAAfAOb/AAACAAcAAAAgAOb/AAACAAMAAAAhAOb/AAACAAcAAAAiAOb/AAACAAMAAAAjAOb/AAACAAcAAAAkAOb/AAACAAMAAAAlAOb/AAACAAcAAAAmAOb/AAACAAMAAAAnAOb/AAACAAcAAAAoAOb/AAACAAMAAAApAOb/AAACAAMAAAAqAOb/AAACAAMAAAArAOb/AAACAAcAAAAsAOb/AAACAAcAAAAtAOb/AAACAAcAAAAuAOb/AAACAAcAAAAvAOb/AAACAAMAAAAwAOb/AAACAAMAAAAxAOb/AAACAAMAAAAyAOb/AAACAAMAAAArABYAAAAKAAEAAAArABUAAAAKAAAAAAAqABYAAAAKAAEAAAAqABUAAAAKAAAAAAApABYAAAAJAAIAAAApABUAAAAKAAAAAAAoABYAAAAKAAEAAAAoABUAAAAKAAQAAAAnABYAAAAJAAIAAAAnABUAAAAKAAQAAAAmABYAAAAKAAUAAAAmABUAAAAKAAAAAAAzABMAAAADAAIAAAAyABMAAAACAAMAAAAzABIAAAAAAAYAAAD9/+b/AAACAAcAAAD8/wkAAAAAAAIAAAD8/wgAAAAAAAYAAAD8/wcAAAAAAAIAAAD8/wYAAAAAAAYAAAD8/wUAAAAAAAYAAAD8/wQAAAAAAAYAAAD8/wMAAAAAAAIAAAD8/wIAAAAAAAIAAAD8/wEAAAAAAAIAAAD8/wAAAAAAAAIAAAD8////AAAAAAIAAAD8//7/AAAAAAIAAAD8//3/AAAAAAIAAAD8//z/AAAAAAIAAAD8//v/AAAAAAYAAAD8//r/AAAAAAYAAAD8//n/AAAAAAYAAAD8//j/AAAAAAIAAAD8//f/AAAAAAIAAAD8//b/AAAAAAIAAAD8//X/AAAAAAYAAAD8//T/AAAAAAYAAAD8//P/AAAAAAYAAAD8//L/AAAAAAYAAAD8//H/AAAAAAIAAAD8//D/AAAAAAYAAAD8/+//AAAAAAYAAAD8/+7/AAAAAAIAAAD8/+3/AAAAAAIAAAD8/+z/AAAAAAYAAAD8/+v/AAAAAAIAAAD8/+r/AAAAAAIAAAD8/+n/AAAAAAYAAAD8/+j/AAAAAAIAAAD8/+f/AAAAAAYAAAD8/+b/AAABAAQAAAD8/wsAAAAAAAYAAAD8/woAAAAAAAIAAAD8/w0AAAABAAIAAAD8/wwAAAAAAAIAAAD9/w0AAAACAAMAAAAEABQAAAAJAAIAAAAFABQAAAAJAAIAAAAGABQAAAAKAAUAAAAHABQAAAALAAYAAAAEABEAAAALAAAAAAAEABIAAAALAAYAAAAEABMAAAAGAAUAAAAFABMAAAAKAAQAAAAGABMAAAAKAAQAAAAHABMAAAALAAQAAAAOAA4AAAABAAcAAAAPAA4AAAACAAcAAAAQAA4AAAACAAMAAAARAA4AAAACAAMAAAASAA4AAAAFAAcAAAASAA0AAAAIAAEAAAASAAwAAAAIAAUAAAASAAsAAAAIAAEAAAATAAsAAAAJAAIAAAATAAoAAAAKAAUAAAATAAkAAAAJAAYAAAASAAkAAAAIAAEAAAASAAoAAAAIAAUAAAAOAAgAAAABAAMAAAAPAAgAAAACAAMAAAAQAAgAAAACAAMAAAARAAgAAAACAAMAAAASAAgAAAAFAAAAAAATAAgAAAAKAAAAAAAUAAgAAAAGAAAAAAAVAAgAAAACAAcAAAATAA4AAAAJAAcAAAAUAA4AAAAGAAcAAAAVAA4AAAACAAcAAAAWAA4AAAACAAMAAAAXAA4AAAACAAMAAAAYAA4AAAADAAcAAAATAAwAAAAJAAIAAAATAA0AAAAJAAIAAAAUAA0AAAALAAIAAAAUAAwAAAALAAYAAAAUAAsAAAALAAYAAAAUAAkAAAALAAIAAAAUAAoAAAALAAIAAAAWAAgAAAACAAMAAAAXAAgAAAACAAMAAAAYAAgAAAADAAcAAAA=")

[node name="Player" parent="." index="3"]
position = Vector2(192, 168)

[node name="Dialog" parent="Player" index="11" node_paths=PackedStringArray("root_dialog") instance=ExtResource("5_xac3s")]
position = Vector2(0, -18)
root_dialog = NodePath("Start")
hide_disabled = false

[node name="Start" parent="Player/Dialog" index="3" instance=ExtResource("6_obgq7")]
can_end = true
can_release_control = false
message = Array[String](["START_0", "START_1", "START_2", "START_3", "START_4", "START_5"])

[node name="GameCamera" parent="." index="4"]
position = Vector2(192, 168)

[node name="NightLight" parent="Lights" index="1" instance=ExtResource("7_uul17")]

[node name="RTeleporter" parent="Entrances" index="0" instance=ExtResource("8_uskd0")]
position = Vector2(400, 0)
target_scene = 2

[node name="EntryPoint" parent="Entrances/RTeleporter" index="1" instance=ExtResource("9_iuclk")]
position = Vector2(-16, 152)
location = 4

[node name="LTeleporter" parent="Entrances" index="1" instance=ExtResource("8_uskd0")]
position = Vector2(-16, 0)
target_entry_point = 5

[node name="EntryPoint" parent="Entrances/LTeleporter" index="1" instance=ExtResource("9_iuclk")]
position = Vector2(16, 104)

[node name="StartEntryPoint" parent="Entrances" index="2" instance=ExtResource("9_iuclk")]
position = Vector2(192, 168)
location = 8

[node name="Tutorial" type="CanvasLayer" parent="." index="7"]
layer = 11

[node name="Move" parent="Tutorial" index="0" instance=ExtResource("10_r8x3s")]
message = "TUTORIAL_MOVE"
actions = Array[StringName]([&"move_left", &"move_right"])
story_id = "main_start"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/Move" index="2"]
position = Vector2(160, -24)
shape = SubResource("SegmentShape2D_8woqr")

[node name="Jump" parent="Tutorial" index="1" instance=ExtResource("10_r8x3s")]
message = "TUTORIAL_JUMP"
actions = Array[StringName]([&"jump"])
story_id = "main_start"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/Jump" index="2"]
position = Vector2(336, -24)
shape = SubResource("SegmentShape2D_s06o2")

[node name="Rain" parent="." index="8" instance=ExtResource("3_sbyas")]
z_index = 10
position = Vector2(192, -64)

[connection signal="closed" from="Player/Dialog" to="." method="_on_dialog_closed"]
